fix bio popup overflow

--- a/probability/styles.less
+++ b/probability/styles.less
@@ -7,6 +7,12 @@
 @import "styles/variables";
 
 
+// This fixes overflowing gloss bubbles at the very beginning.
+.article-wrap { margin-top: -120px; padding-top: 120px; }
+.chapter-hero { z-index: 0; }
+
+
+
 .fixed { position: relative; }
 .fixed-bg {
     position: absolute;
